practicing unordered and ordered lists

--- a/html_foundations/index.html
+++ b/html_foundations/index.html
@@ -27,4 +27,43 @@
 			impedit adipisci aspernatur? <em>Laudantium accusantium consectetur</em> excepturi 
 			quibusdam earum ipsa, in exercitationem omnis debitis minus placeat.</p>
 	</body>
+
+
+
+	<!-- practicing lists -->
+
+	<body>
+		<h4>My Shopping List</h4>
+			<ul>
+				<li>bananas</li>
+				<li>milk</li>
+				<li>flour</li>
+				<li>apples</li>
+			</ul>
+		<h4>My To-Do's</h4>
+			<ol>
+				<li>Practice TOP for at least 1 hour</li>
+				<li>Wash the laundry</li>
+				<li>Go grocery shopping</li>
+			</ol>
+		<h4>Bucketlist Travel Places</h4>
+			<ul>
+				<li>Philippines</li>
+				<li>Japan</li>
+				<li>Germany</li>
+				<li>Italy</li>
+				<li>Greenland</li>
+			</ul>
+		<h4>Top anime</h4>
+			<ol>
+				<li>HunterxHunter</li>
+				<li>Haikyuu</li>
+				<li>Jujutski Kaisen</li>
+				<li>Ouran Highschool Host Club</li>
+				<li>Demon Slayer</li>
+				
+			</ol>
+	</body>
+
+
 </html>
