finished with links and images lesson

--- a/html_foundations/odin-links-and-images/index.html
+++ b/html_foundations/odin-links-and-images/index.html
@@ -14,6 +14,7 @@
         <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">click me!</a>
 
         <!-- link to the about page -->
-        <a href="pages/about.html">About</a>
+        <a href="./pages/about.html">About</a>
+
 
 </html>
