--- a/html_foundations/odin-links-and-images/pages/about.html
+++ b/html_foundations/odin-links-and-images/pages/about.html
@@ -7,5 +7,10 @@
 
   <body>
     <h1>About Page</h1>
+
   </body>
+
+  <img src="../images/dog.jpg" alt="Black Pug wearing a sweater in front of a yellow background"
+  height="340", width="310">
+
 </html>
