--- a/html_foundations/odin-links-and-images/pages/about.html
+++ b/html_foundations/odin-links-and-images/pages/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Odin Links and Images</title>
+    <title>Page 2</title>
   </head>
 
   <body>
