--- a/html_foundations/odin-recipes/index.html
+++ b/html_foundations/odin-recipes/index.html
@@ -8,7 +8,13 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html" >World's Best Lasagna</a>
+
+        <ul>
+            <li><a href="recipes/lasagna.html" >World's Best Lasagna</a></li>
+            <li>Recipe 2</li>
+            <li>Recipe 3</li>
+        </ul>
+        
 
     </body>
 
