--- a/html_foundations/odin-recipes/index.html
+++ b/html_foundations/odin-recipes/index.html
@@ -11,8 +11,8 @@
 
         <ul>
             <li><a href="recipes/lasagna.html" >World's Best Lasagna</a></li>
-            <li>Recipe 2</li>
-            <li>Recipe 3</li>
+            <li><a href="recipes/garlic_bread.html">Roasted Garlic Bread</a></li>
+            <li><a href="recipes/shirley_temple.html">Shirley Temple</a></li>
         </ul>
         
 
