Reworking formats - reorganizing files
I reorganized the repo because I removed the previous Links and Images
practice. Since I am getting a lot of practice in with the recipe
projects, I don't need to refer to my old practice anymore. I can always
look through the commit history if I need it for any reason.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>my webpage</title>
+		<link rel="stylesheet" href="styles.css">
 	</head>
 
 	<body>
-		<h1> My TOP Foundations Practice</h1>
+		<h1 class="title"> My TOP Foundations Practice</h1>
 
 		<div>
-			<a href="./html_foundations/odin-recipes/index.html">Project: Recipes</a>
+			<div class="subtitle">Projects:</div>
+			<ul>
+				<li><a href="./project_recipes/index.html">Recipes</a></li>
+			</ul>
 		</div>
 
 
