add notes and links of recipes to add later

--- a/project_recipes/index.html
+++ b/project_recipes/index.html
@@ -12,8 +12,14 @@
 
         <ul>
             <li><a href="recipes/coconut_macaroons.html">Coconut Macaroons</a></li>
-            <!-- <li></li>
-            <li></li> -->
+            <!-- recipes to potentially add: -->
+            <!-- https://joyofbaking.com/ChristmasSugarCookies.html -->
+            <!-- https://cooking.nytimes.com/recipes/1022674-chewy-gingerbread-cookies -->
+            <!-- https://preppykitchen.com/thumbprint-cookies/ -->
+            <!-- https://www.ambitiouskitchen.com/brown-butter-chocolate-chip-cookies/ -->
+            <!-- https://jeanelleats.com/ube-coconut-cookies/ -->
+            <!-- https://www.foodnetwork.com/recipes/ree-drummond/mint-chocolate-truffles-recipe-2102386 -->
+
         </ul>
         
 
