finish reworking christmas cookie recipes

--- a/project_recipes/index.html
+++ b/project_recipes/index.html
@@ -9,20 +9,13 @@
 
     <body>
         <h1 class="title">Christmas Cookie Recipes!</h1>
-
         <ul>
             <li><a href="recipes/coconut_macaroons.html">Coconut Macaroons</a></li>
-            <!-- recipes to potentially add: -->
-            <!-- https://joyofbaking.com/ChristmasSugarCookies.html -->
-            <!-- https://cooking.nytimes.com/recipes/1022674-chewy-gingerbread-cookies -->
-            <!-- https://preppykitchen.com/thumbprint-cookies/ -->
-            <!-- https://www.ambitiouskitchen.com/brown-butter-chocolate-chip-cookies/ -->
-            <!-- https://jeanelleats.com/ube-coconut-cookies/ -->
-            <!-- https://www.foodnetwork.com/recipes/ree-drummond/mint-chocolate-truffles-recipe-2102386 -->
-
-        </ul>
-        
-
+            <li><a href="recipes/sugar_cookies.html">Christmas Sugar Cookies</a></li>
+            <li><a href="recipes/ube-cookies.html">Ube Cookies</a></li>
+            <li><a href="recipes/gingerbread.html">Chewy Gingerbread Cookies</a></li>
+            <li><a href="recipes/brown_butter_ccc.html">Brown Butter Chocolate Chip Cookies</a></li>
+            <li><a href="recipes/mint_truffles.html">Mint Chocolate Truffles</a></li>
+        </ul> 
     </body>
-
 </html>
