--- a/project_recipes/recipes/coconut_macaroons.html
+++ b/project_recipes/recipes/coconut_macaroons.html
@@ -10,12 +10,7 @@
     <body>
         <h1 class="title">Coconut Macaroons</h1>
 
-        <div>
-            <a href="https://www.laurainthekitchen.com/recipes/coconut-macaroons/" 
-            target="_blank" rel="noopener noreferrer">Original Recipe</a>
-        </div>
-
-        <!-- <img src="../recipes/garlic_bread.jpg" alt="Photo of Roasted Garlic Bread" height="400" width="420"> -->
+        <img src="../recipes/coconut_macaroons.jpeg" alt="Photo of Coconut Macaroons">
 
     </body>
 
@@ -23,8 +18,8 @@
         
         <h4>Ingredients</h4>
         <ul>
-            <li>1 14 oz bag of sweetened shredded coconut</li>
-            <li>1 14 oz can of sweetened condensed milk</li>
+            <li>1 14-oz bag of sweetened shredded coconut</li>
+            <li>1 14-oz can of sweetened condensed milk</li>
             <li>1 tsp vanilla extract</li>
             <li>1/4 tsp almond extract</li>
             <li>2 egg whites, at room temperature</li>
@@ -40,7 +35,7 @@
             </li>
             <li>In the bowl of an electric mixer, fitted with a whisk attachment, 
                 whisk the eggs, salt and cream of tartar until very stiff peaks.</li>
-            <li>Meanwhile in a large bowl mix together the remaining ingredients until 
+            <li>Meanwhile, in a large bowl mix together the remaining ingredients until 
                 the condensed milk is incorporated well throughout the shredded 
                 coconut.Fold in the whipped egg whites gently making sure not to 
                 deflate them.</li>
@@ -50,5 +45,19 @@
             <li>Let cool on the baking sheet for 5 minutes before transferring to a 
                 wire rack to cool completely.</li>
         </ol>
+
+
+        <div>
+            <a href="https://www.laurainthekitchen.com/recipes/coconut-macaroons/" 
+            target="_blank" rel="noopener noreferrer">Original Recipe</a>
+        </div>
+
+
+        <div>
+
+            <p>If you liked this recipe, check out this one!</p>
+            <a href="./ube-cookies.html">Ube Cookies</a>
+            
+        </div>
     </body>
 </html>
