--- a/project_recipes/index.html
+++ b/project_recipes/index.html
@@ -9,6 +9,8 @@
 
     <body>
         <h1 class="title">Christmas Cookie Recipes!</h1>
+        <!-- later on, would be nice to have more photos on this page to preview the results of recipes 
+            later, also fix some of the images that did not do well with the formating -->
         <ul>
             <li><a href="recipes/coconut_macaroons.html">Coconut Macaroons</a></li>
             <li><a href="recipes/sugar_cookies.html">Christmas Sugar Cookies</a></li>
