apply box model basics to TOP-foundtions/index.html

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 		<h1 class="title"> My TOP Foundations Practice</h1>
 
 		<div>
-			<div class="subtitle">Projects:</div>
-			<ul>
-				<li><a href="./project_recipes/index.html">Recipes</a></li>
-			</ul>
+			<h3 class="subtitle">Projects:</h3>
+			<div class="project"><a href="./project_recipes/index.html">Recipes</a></div>
+			<div class="description">Mini Recipe Book of Christmas Cookies</div>
+
 		</div>
 
 
